# urltrim

./: LICENSE  README.md  pyproject.toml  setup.py
tests/: test_urltrim.py
urltrim/: __init__.py  core.py
