[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urltrim"
version = "0.1.0"
dependencies = []
requires-python = ">=3.6"
authors = [
    {name = "PRANEETH KUMAR UDDARAJU", email = "upraneeth24@gmail.com"},
]
description = "A Python library to trim long URLs in code"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/upraneethkumar/urltrim"